# ai-kernel

./: MCP_TOOL_README.md  README.md  pyproject.toml  requirements.txt
kernel_stack_analyzer/: __init__.py  __main__.py  ai_agents.py  code_extractor.py  context.py  main.py  mcp_server.py  parser.py
tests/: test_mcp_analyzer.py
