[project]
name = "ai-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "fastmcp==2.5.2",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pygments>=2.15.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
